tests/NormalTests/paczka1/fuzzy1/53151814.err
Error in line 5: FRaSdeDcaw A631 103,9
Error in line 17: FRaSdeDcaw S482 89,6
Error in line 22: FRaSdeDcaw A694 -2,9
Error in line 24: Yl7KcuRoi8 S482 53,3
Error in line 25: Yl7KcuRoi8 A694 24,1
Error in line 33: 3JEh A631 82,5
Error in line 34: 3JEh A675 6,8
